--- a/resources/views/common/register.html
+++ b/resources/views/common/register.html
@@ -16,161 +16,119 @@
   <script src="/resources/webframe/layer/layer.js"></script>
 </head>
 <body>
-<div class="container-fluid">
-	<div>
-		<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
-			<div class="container">
-				<a class="navbar-brand" href="/">Home</a>
-				<div class="justify-content-end">
-					<ul class="navbar-nav">
-						<li class="nav-item"><a class="nav-link" href="/login">登陆</a></li>
-						<li class="nav-item"><a class="nav-link" href="/register">注册</a></li>
-					</ul>
+	<div class="container-fluid">
+		<div>
+			<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+				<div class="container">
+					<a class="navbar-brand" href="/">Home</a>
+					<div class="justify-content-end">
+						<ul class="navbar-nav">
+							<li class="nav-item"><a class="nav-link" href="/login">Sign in</a></li>
+							<li class="nav-item"><a class="nav-link" href="/register">Sign up</a></li>
+						</ul>
+					</div>
 				</div>
-			</div>
-		</nav>
-	</div>
-	<div style="margin-top:75px;margin-bottom:75px">
-		<div class="row">
-			<div class="col-sm-4">
-			</div>
-			<div class="col-sm-4">
-				<div class="text-center" style="margin-bottom:25px">
-					<h1>用户注册</h1>
+			</nav>
+		</div>
+		<div style="margin-top:75px;margin-bottom:75px">
+			<div class="row">
+				<div class="col-sm-4">
 				</div>
-			
-					<div class="form-group">
-						<input id="id" type="text" class="form-control" name="id" placeholder="请输入您的学号/工号">
+				<div class="col-sm-4">
+					<div class="text-center" style="margin-bottom:25px">
+						<h1>用户注册</h1>
 					</div>
-					<div class="form-group">
-						<input id="email" type="text" class="form-control" name="email" placeholder="邮箱">
-					</div>
-					<div class="form-group">
-						<input id="pwd" type="password" class="form-control" placeholder="密码">
-					</div>
-					<div class="form-group">
-						<input id="verifyPwd" type="password" class="form-control" name="password" placeholder="确认密码">
-					</div>
-					<div class="form-group">
-						<input id="captcha" type="text" class="form-control" name="captchaSolution" placeholder="验证码">
-					</div>
-					<div class="input-group">
-						<p><img id="image" src="/captcha/{% .captcha %}.png" alt="Captcha image"></p>
-						<input id="captchaID" type="hidden" name="captchaID" value="{% .captcha %}">
-						<button href="#" type="button" class="btn btn-link" onclick="ReloadCaptcha();">刷新验证码</button>
-					</div>
-					<div class="form-group form-check form-check-inline" id="identity">
-						<label class="form-check-label">
-							&nbsp;&nbsp;&nbsp;<input class="form-check-input" type="radio" name="role" value="1"> 辅导员
-						</label>
-						<label class="form-check-label">
-							&nbsp;&nbsp;&nbsp;<input class="form-check-input" type="radio" name="role" value="2"> 学生处
-						</label>
-						<label class="form-check-label">
-							&nbsp;&nbsp;&nbsp;<input class="form-check-input" type="radio" name="role" value="3" checked> 学生
-						</label>
-					</div>
-					<div class="form-group">
-						<center><button type="submit" id="nextbutton" class="btn btn-primary">下一步</button></center>
-					</div>
-				
-			</div>
-			<div class="col-sm-4">
+					<form id="registerForm" action="/register" method="POST">
+						<div class="form-group">
+							<input id="id" type="text" class="form-control" name="id" placeholder="请输入您的学号/工号">
+						</div>
+						<div class="form-group">
+							<input id="email" type="text" class="form-control" name="email" placeholder="邮箱">
+						</div>
+						<div class="form-group">
+							<input id="pwd" type="password" class="form-control" placeholder="密码">
+						</div>
+						<div class="form-group">
+							<input id="verifyPwd" type="password" class="form-control" name="password" placeholder="确认密码">
+						</div>
+						<div class="form-group">
+							<input id="captcha" type="text" class="form-control" name="captchaSolution" placeholder="验证码">
+						</div>
+						<div class="input-group">
+							<p><img id="image" src="/captcha/{% .captcha %}.png" alt="Captcha image"></p>
+							<input id="captchaID" type="hidden" name="captchaID" value="{% .captcha %}">
+							<button href="#" type="button" class="btn btn-link" onclick="ReloadCaptcha();">刷新验证码</button>
+						</div>
+						<div class="form-group form-check form-check-inline">
+							<label class="form-check-label">
+								&nbsp;&nbsp;&nbsp;<input class="form-check-input" type="radio" name="role" value="1"> 辅导员
+							</label>
+							<label class="form-check-label">
+								&nbsp;&nbsp;&nbsp;<input class="form-check-input" type="radio" name="role" value="2"> 学生处
+							</label>
+							<label class="form-check-label">
+								&nbsp;&nbsp;&nbsp;<input class="form-check-input" type="radio" name="role" value="3" checked> 学生
+							</label>
+						</div>
+						<div class="form-group">
+							<center><button type="submit" class="btn btn-primary">Submit</button></center>
+						</div>
+					</form>
+				</div>
+				<div class="col-sm-4">
+				</div>
 			</div>
 		</div>
+		<div>
+			<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom">
+				<span class="navbar-text" style="width:100%;text-align:center;">
+					Copyright (c) 2017-2018 <a href="http://www.cqnu.edu.cn/">www.cqnu.edu.cn</a> All rights reserved. 渝ICP备 16012597号
+				</span>
+			</nav>
+		</div>
 	</div>
-	<div>
-		<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom">
-			<span class="navbar-text" style="width:100%;text-align:center;">
-				Copyright (c) 2017-2018 <a href="http://www.cqnu.edu.cn/">www.cqnu.edu.cn</a> All rights reserved. 渝ICP备 16012597号
-			</span>
-		</nav>
-	</div>
-</div>
 
-<script>
-	$(function() {
-			function VerifyRequest() {
-			return VerifyID() && VerifyEmail() && VerifyPassword() && VerifyCaptcha();
-		}
-		 $("#nextbutton").click(function(){
-  //创建FormData对象
-       var Formdata = new FormData();
-        		var id=$("#id").val();
-				var email=$("#email").val();
-				var pwd=$("#pwd").val();
-				var verifyPwd=$("#verifyPwd").val();
-				var captcha=$("#captcha").val();
-				var identity=$("#identity").find('input[name="role"]:checked').val();
-				 Formdata.append("id",id);
-				 Formdata.append("email",email);
-				 Formdata.append("pwd",pwd);
-				 Formdata.append("verifyPwd",verifyPwd);
-				 Formdata.append("captcha",captcha);
-				 Formdata.append("identity",identity);
-				 $.ajax({
-					url:'/register',
-					type:'post',
-					beforeSend:VerifyRequest,
-					data:Formdata,
-					success:function (data){
-						if(data.status==0){
-							layer.open({
-					type: 2,
-					title: '请填写个人信息',
-					shadeClose: true,
-					shade: 0.8,
-					area: ['50%','90%'],
-					fixed: false,
-					content:response.Redirect + "?ReqModify=1"
-					//cntent: response.Redirect + "?ReqModify=1"
-					
-				});
-						}else{
-							layer.msg("注册失败");
-							return false;
-						}
+	<script>
+		$(document).ready(function() {
+			var	options = {
+				beforeSubmit : VerifyRequest,
+				success		 : ResponseCallback
+			};
 
-					}
-				})
-
-
-        //为FormData对象添加数据
-       
-    });
-			
+			$("#registerForm").ajaxForm(options);
 		});
 
-	function VerifyID() {
-		regExp = /^[0-9]{13}$/;
-		if (($("#id").val() == "") || (!regExp.test($("#id").val()))) {
-			layer.tips("学号/工号必须是13位数字", $("#id"));
-			return false;
+		function VerifyID() {
+			regExp = /^[0-9]{13}$/;
+			if (($("#id").val() == "") || (!regExp.test($("#id").val()))) {
+				layer.tips("学号/工号必须是13位数字", $("#id"));
+				return false;
+			}
+			return true;
 		}
-		return true;
-	}
 
-	function VerifyEmail() {
-		regExp = /^\w+([-+.]\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*$/;
-		if ($("#email") == "" || (!regExp.test($("#email").val()))) {
-			layer.tips("请输入正确的邮箱地址", $("#email"));
-			return false;
+		function VerifyEmail() {
+			regExp = /^\w+([-+.]\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*$/;
+			if ($("#email") == "" || (!regExp.test($("#email").val()))) {
+				layer.tips("请输入正确的邮箱地址", $("#email"));
+				return false;
+			}
+			return true;
 		}
-		return true;
-	}
 
-	function VerifyPassword() {
-		regExp = /^(?![0-9]+$)(?![a-zA-Z]+$)[0-9A-Za-z]{8,16}$/;
-		if ($("#pwd").val() == "" || (!regExp.test($("#pwd").val()))) {
-			layer.tips("密码由8-16位字母和数字组成，不能是纯数字或纯英文", $("#pwd"));
-			return false;
+		function VerifyPassword() {
+			regExp = /^(?![0-9]+$)(?![a-zA-Z]+$)[0-9A-Za-z]{8,16}$/;
+			if ($("#pwd").val() == "" || (!regExp.test($("#pwd").val()))) {
+				layer.tips("密码由8-16位字母和数字组成，不能是纯数字或纯英文", $("#pwd"));
+				return false;
+			}
+			if ($("#pwd").val() != $("#verifyPwd").val()) {
+				layer.tips("两次输入密码不一致！", $("#verifyPwd"));
+				return false;
+			}
+			return true;
 		}
-		if ($("#pwd").val() != $("#verifyPwd").val()) {
-			layer.tips("两次输入密码不一致！", $("#verifyPwd"));
-			return false;
-		}
-		return true;
-	}
+
 		function VerifyCaptcha() {
 			regExp = /^[0-9]{6}$/;
 			if (($("#captcha").val() == "") || (!regExp.test($("#captcha").val()))) {
@@ -180,15 +138,38 @@
 			return true;
 		}
 
-
-
-	function ReloadCaptcha() {
-		$.post("/captcha", {}, function (response) {
-			document.getElementById('image').src = "/captcha/"+response.captcha+".png";
-			document.getElementById('captchaID').value = response.captcha;
-			return false;
-		}
+		function ReloadCaptcha() {
+			$.post("/captcha", {}, function (response) {
+				document.getElementById('image').src = "/captcha/"+response.captcha+".png";
+				document.getElementById('captchaID').value = response.captcha;
+				return false;
+			}
 		)}
+
+		function VerifyRequest(formData, jqForm, options) {
+			return VerifyID() && VerifyEmail() && VerifyPassword() && VerifyCaptcha();
+		}
+
+		function ResponseCallback(response, status, xhr, $form) {
+			if (response.status==1) {
+				layer.alert(response.msg, {icon:2});
+				document.getElementById('image').src = "/captcha/"+response.captcha+".png";
+				document.getElementById('captchaID').value = response.captcha;
+				return;
+			}
+			if (response.status==0) {
+				$.cookie("Authrization", response.Authrization);
+				layer.open({
+					type: 2,
+					title: '请填写个人信息',
+					shadeClose: true,
+  					shade: 0.8,
+					area: ['50%','90%'],
+					fixed: false,
+					content: response.Redirect + "?ReqModify=1"
+				});
+			}
+		}
 	</script>
 </body>
 </html>
