--- a/resources/views/common/register.html
+++ b/resources/views/common/register.html
@@ -23,8 +23,8 @@
 					<a class="navbar-brand" href="/">Home</a>
 					<div class="justify-content-end">
 						<ul class="navbar-nav">
-							<li class="nav-item"><a class="nav-link" href="/login">Sign in</a></li>
-							<li class="nav-item"><a class="nav-link" href="/register">Sign up</a></li>
+							<li class="nav-item"><a class="nav-link" href="/login">登陆</a></li>
+							<li class="nav-item"><a class="nav-link" href="/register">注册</a></li>
 						</ul>
 					</div>
 				</div>
@@ -71,7 +71,7 @@
 							</label>
 						</div>
 						<div class="form-group">
-							<center><button type="submit" class="btn btn-primary">Submit</button></center>
+							<center><button type="submit" class="btn btn-primary">下一步</button></center>
 						</div>
 					</form>
 				</div>
