--- a/resources/views/common/register.html
+++ b/resources/views/common/register.html
@@ -11,6 +11,7 @@
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 <script type="text/javascript" src="/resources/webframe/jquery/jquery-1.10.2.min.js"></script>
       <script type="text/javascript" src="/resources/webframe/jquery/jquery.form/jquery.form.js"></script>
+	  <script type="text/javascript" src="/resources/webframe/jquery/jquery.cookie/jquery.cookie.js"></script>
 <script type="text/javascript" src="/resources/webframe/bootstrap/js/bootstrap.min.js"></script>
   <script src="/resources/webframe/bootstrap-table/src/bootstrap-table.js"></script>
  <script src="/resources/webframe/bootstrap-table/src/locale/bootstrap-table-zh-CN.js"></script>
